# OpenCL-Learn-Repo

20230516/hellokernel/: CMakeLists.txt  hellokernel.cc  hellokernel.cl
20230516/helloworld/: CMakeLists.txt  helloworld.cc
